WebRTCBin fails to parse DTLS/SCTP m= line
This is the SDP offer:
v=0
o=- 5037321298267753507 2 IN IP4 127.0.0.1
s=-
t=0 0
a=group:BUNDLE audio video data
a=msid-semantic: WMS stream_label
m=audio 9 UDP/TLS/RTP/SAVPF 111 103 9 102 0 8 105 13 110 113 126
c=IN IP4 0.0.0.0
a=rtcp:9 IN IP4 0.0.0.0
a=ice-ufrag:BmeW
a=ice-pwd:QR65fGA9k2kCVZKum9KCFnGT
a=ice-options:trickle
a=fingerprint:sha-256 D6:FB:7C:45:5E:A0:3A:FC:6E:FF:38:AF:7E:63:3B:CD:0B:DD:5F:F7:DB:18:6C:ED:CD:83:BD:F7:F6:F8:0A:67
a=setup:actpass
a=mid:audio
a=extmap:1 urn:ietf:params:rtp-hdrext:ssrc-audio-level
a=recvonly
a=rtcp-mux
a=rtpmap:111 opus/48000/2
a=rtcp-fb:111 transport-cc
a=fmtp:111 minptime=10;useinbandfec=1
a=rtpmap:103 ISAC/16000
a=rtpmap:9 G722/8000
a=rtpmap:102 ILBC/8000
a=rtpmap:0 PCMU/8000
a=rtpmap:8 PCMA/8000
a=rtpmap:105 CN/16000
a=rtpmap:13 CN/8000
a=rtpmap:110 telephone-event/48000
a=rtpmap:113 telephone-event/16000
a=rtpmap:126 telephone-event/8000
m=video 9 UDP/TLS/RTP/SAVPF 100
c=IN IP4 0.0.0.0
a=rtcp:9 IN IP4 0.0.0.0
a=ice-ufrag:BmeW
a=ice-pwd:QR65fGA9k2kCVZKum9KCFnGT
a=ice-options:trickle
a=fingerprint:sha-256 D6:FB:7C:45:5E:A0:3A:FC:6E:FF:38:AF:7E:63:3B:CD:0B:DD:5F:F7:DB:18:6C:ED:CD:83:BD:F7:F6:F8:0A:67
a=setup:actpass
a=mid:video
a=extmap:2 urn:ietf:params:rtp-hdrext:toffset
a=extmap:3 http://www.webrtc.org/experiments/rtp-hdrext/abs-send-time
a=extmap:4 urn:3gpp:video-orientation
a=extmap:5 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01
a=extmap:6 http://www.webrtc.org/experiments/rtp-hdrext/playout-delay
a=extmap:7 http://www.webrtc.org/experiments/rtp-hdrext/video-content-type
a=extmap:8 http://www.webrtc.org/experiments/rtp-hdrext/video-timing
a=extmap:10 http://tools.ietf.org/html/draft-ietf-avtext-framemarking-07
a=extmap:12 http://www.webrtc.org/experiments/rtp-hdrext/color-space
a=sendrecv
a=rtcp-mux
a=rtcp-rsize
a=rtpmap:100 H264/90000
a=rtcp-fb:100 goog-remb
a=rtcp-fb:100 transport-cc
a=rtcp-fb:100 ccm fir
a=rtcp-fb:100 nack
a=rtcp-fb:100 nack pli
a=fmtp:100 level-asymmetry-allowed=1;packetization-mode=1;profile-level-id=42e028
a=ssrc-group:FID 3833946854 2006842481
a=ssrc:3833946854 cname:1NbaOOcg86OzyyRG
a=ssrc:3833946854 msid:stream_label video_label
a=ssrc:3833946854 mslabel:stream_label
a=ssrc:3833946854 label:video_label
a=ssrc:2006842481 cname:1NbaOOcg86OzyyRG
a=ssrc:2006842481 msid:stream_label video_label
a=ssrc:2006842481 mslabel:stream_label
a=ssrc:2006842481 label:video_label
m=application 9 DTLS/SCTP 5000
c=IN IP4 0.0.0.0
a=ice-ufrag:BmeW
a=ice-pwd:QR65fGA9k2kCVZKum9KCFnGT
a=ice-options:trickle
a=fingerprint:sha-256 D6:FB:7C:45:5E:A0:3A:FC:6E:FF:38:AF:7E:63:3B:CD:0B:DD:5F:F7:DB:18:6C:ED:CD:83:BD:F7:F6:F8:0A:67
a=setup:actpass
a=mid:data
a=sctpmap:5000 webrtc-datachannel 1024
GStreamer spits out this warning
0:00:08.212584000 82254 0x7fde580e71e0 ERROR default gstsdpmessage.c:3704:GstCaps *gst_sdp_media_get_caps_from_media(const GstSDPMedia *, gint): rtpmap type not given for dynamic payload 5000
(unknown:82254): GStreamer-CRITICAL **: 19:02:44.871: gst_caps_get_size: assertion 'GST_IS_CAPS (caps)' failed
(unknown:82254): GStreamer-CRITICAL **: 19:02:44.871: gst_caps_append: assertion 'GST_IS_CAPS (caps2)' failed
(unknown:82254): GStreamer-CRITICAL **: 19:02:44.871: gst_caps_get_structure: assertion 'index < GST_CAPS_LEN (caps)' failed
0:00:08.212823000 82254 0x7fde580e71e0 ERROR default gstsdpmessage.c:3751:GstSDPResult gst_sdp_media_set_media_from_caps(const GstCaps *, GstSDPMedia *): ignoring stream without media type
(unknown:82254): GStreamer-CRITICAL **: 19:02:44.871: gst_caps_get_structure: assertion 'index < GST_CAPS_LEN (caps)' failed
and is stuck.
More information here: https://github.com/centricular/gstwebrtc-demos/issues/113
Edited by Olivier Crête